--- a/src/main/java/cajero/PrimeraPantalla.form
+++ b/src/main/java/cajero/PrimeraPantalla.form
@@ -452,6 +452,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="00:00:00"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
