--- a/src/main/java/cajero/ConsultaSaldoPantalla.form
+++ b/src/main/java/cajero/ConsultaSaldoPantalla.form
@@ -285,21 +285,21 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jl_tarjeta1" min="-2" pref="68" max="-2" attributes="0"/>
+                      <Component id="jl_tarjeta" min="-2" pref="68" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jl_numTarjeta1" min="-2" pref="226" max="-2" attributes="0"/>
+                      <Component id="jl_numTarjeta" min="-2" pref="226" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jl_numTarjeta1" alignment="1" pref="29" max="32767" attributes="0"/>
-                  <Component id="jl_tarjeta1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jl_numTarjeta" alignment="1" pref="29" max="32767" attributes="0"/>
+                  <Component id="jl_tarjeta" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jl_tarjeta1">
+            <Component class="javax.swing.JLabel" name="jl_tarjeta">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="18" style="1"/>
@@ -314,7 +314,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jl_numTarjeta1">
+            <Component class="javax.swing.JLabel" name="jl_numTarjeta">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="18" style="1"/>
